<resources>
    <string name="app_name">NeuroCare</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="image">Image</string>
    <string name="patients">Patients</string>
    <string name="schedules">Schedules</string>
    <string name="actions">Actions</string>
    <string name="notifications">Notifications</string>
    <string name="current_condition">Current Condition</string>
    <string name="family_notes">Family Notes</string>
    <string name="notes">Notes</string>
    <string name="title_activity_patient_detail">Patient Detail</string>
    <string name="title_activity_feedback_form">Feedback Form</string>

    <string name="motor">Motor</string>
    <string name="cognitive">Cognitive</string>

    <string name="save">Save</string>

    <string name="datetime">Date and Time</string>
    <string name="description">Description</string>

    <string name="meeting_request">Request a meeting</string>

    <string name="ongoing_issues">Ongoing Issues/Challenges</string>
    <string name="fam_admission">FAM Admission</string>

    <string-array name="admission_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="title_activity_add_family_note">AddFamilyNoteActivity</string>
    <string name="title_activity_new_feedback_form">NewFeedbackFormActivity</string>
</resources>
