<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="universityofedinburgh.neurocare.MeetingRequestActivity"
    tools:showIn="@layout/activity_meeting_request">

    <TextView
        android:text="@string/datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@android:style/Widget.Material.Light.Spinner"
            android:layout_weight="0.3"
            android:id="@+id/meeting_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            tools:targetApi="lollipop" />
        <Button
            style="@android:style/Widget.Material.Light.Spinner"
            android:layout_weight="0.7"
            android:id="@+id/meeting_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            tools:targetApi="lollipop" />
    </LinearLayout>

    <TextView
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/description"
        android:singleLine="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/LimeGreenButton"
        android:layout_gravity="center_horizontal"
        android:id="@+id/save_meeting"
        android:onClick="onClick"
        android:text="@string/save" />

</LinearLayout>
